tests/paczka2/big_fuzzy/39070905.err
Error in line 2: i3esvyxrhhX S534 12,1
Error in line 9: 3TPs78kO A874 5,2
Error in line 8: iezMG5pK A978 9,5
Error in line 31: U7P67eo S664 28,8
Error in line 30: FE75dd88 S534 1,0
Error in line 29: 3TPs78kO S664 24,7
Error in line 49: i3esvyxrhhX S534 97,5
Error in line 47: YqvrNWV S534 26,4
Error in line 58: YqvrNWV A874 66,0
Error in line 53: i3esvyxrhhX A874 6,4
Error in line 71: iezMG5pK A874 47,1
Error in line 78: S664 S534 43,5
Error in line 87: FE75dd88 A978 430,6
Error in line 93: FE75dd88 A874 26,5
Error in line 99: iezMG5pK S664 76,9
Error in line 119: FE75dd88 A874 85,4
Error in line 90: S664 A978 3,9
Error in line 122: S664 S664 96,1
Error in line 130: U7P67eo S664 27,9
Error in line 134: 3TPs78kO A978 489,0
Error in line 146: YqvrNWV S534 -1,8
Error in line 149: S664 S534 50,0
Error in line 173: FE75dd88 A874 24,87
Error in line 175: iezMG5pK A978 470,99
Error in line 170: FE75dd88 S664 65,2
Error in line 179: S664 S664 63,0
Error in line 177: FE75dd88 A874 114,4
Error in line 189: 3TPs78kO S664 15,7
Error in line 176: U7P67eo A978 16,2
Error in line 206: i3esvyxrhhX S664 28,1
Error in line 201: FE75dd88 A978 329,2
Error in line 205: 3TPs78kO A978 34,3
Error in line 218: iezMG5pK A874 5,4
Error in line 220: iezMG5pK S534 94,2
Error in line 227: S664 A978 8,28
Error in line 226: iezMG5pK A874 14,3
Error in line 221: YqvrNWV A874 21,8
Error in line 236: S664 A874 43,9
Error in line 233: iezMG5pK A978 92,4
Error in line 239: S664 A978 9,5
Error in line 242: YqvrNWV S534 95,74
Error in line 243: FE75dd88 A978 73,3
Error in line 246: FE75dd88 S534 33,4
